--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -2,7 +2,7 @@
   "$schema": "https://github.com/Azure/data-api-builder/releases/download/v0.9.7/dab.draft.schema.json",
   "data-source": {
     "database-type": "mssql",
-    "connection-string": "Server=tcp:hwe-hc-dcpdev-dmz-west-europe-rg.database.windows.net,1433;Initial Catalog=lcmobile-tenant-db;User ID=tieto;Password=lcmobile@123;Encrypt=True;",
+    "connection-string": "@env('DATABASE_CONNECTION_STRING')",
     "options": {
       "set-session-context": false
     }
